tests/cli/snapshots/cli__baseline__baseline_untranslated_map_callback_jsx_uses_jsx_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:8:22
     |
   8 |                     {t("item_label")}
     |                      ^
  +                     {/* glot-disable-next-line untranslated */}

Inserted 1 comment(s) in 1 file(s):
  - untranslated: 1 comment(s), 1 key(s)

----- stderr -----
