tests/cli/snapshots/cli__baseline__baseline_untranslated_multiple_usages.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
Inserted 2 comment(s) in 2 file(s) (processed 2 issue(s)):
  - untranslated: 2 comment(s), 1 key(s) (from 2 usage(s))

----- stderr -----
