tests/cli/snapshots/cli__baseline__baseline_untranslated_single_usage.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:4:18
     |
   4 |     return <div>{t("greeting")}</div>;
     |                  ^
  +     // glot-disable-next-line untranslated

Would insert 1 comment(s) in 1 file(s):
  - untranslated: 1 comment(s), 1 key(s)
Run with --apply to insert these comments.

----- stderr -----
