tests/cli/snapshots/cli__baseline__baseline_untranslated_ternary_jsx_expression_uses_slash_comment.snap
---
source: tests/cli/baseline.rs
info:
  program: glot
  args:
    - baseline
    - "--apply"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
  --> ./src/app.tsx:7:19
     |
   7 |                 ? t("processing")
     |                   ^
  +                 // glot-disable-next-line untranslated

  --> ./src/app.tsx:8:19
     |
   8 |                 : t("ready")}
     |                   ^
  +                 // glot-disable-next-line untranslated

Inserted 2 comment(s) in 1 file(s):
  - untranslated: 2 comment(s), 2 key(s)

----- stderr -----
